@@ -1,3 +1,6 @@
+* 2005-08-03 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Add "scale" setting for TickLabels
+	
 * 2005-08-02 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Settings controls cleanups
 	- Implement Axis setting (for choosing axes)
